Projeto finalizado e postado no ambiente.

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,13 @@ p.subtitulo {
     color: blue;    
 }
 
+ol.item-ordenado {
+    text-align: left;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 12;
+    color: blue; 
+}
+
 ul.itens {
     text-align: left;
     font-family: 'Times New Roman', Times, serif;
